jump fix

--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@
 }
 @keyframes jump {
   0%{top: 150px;}
-  30%{top: 100px;}
-  70%{top: 100px;}
+  30%{top: 20px;}
+  70%{top: 20px;}
   100%{top: 150px;}
 }
 
